--- a/style.css
+++ b/style.css
@@ -119,8 +119,9 @@ a {
 	.players,
 	.highlights,
 	.end-container {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		/* align-items: center; */
+		justify-content: center;
 	}
 }
