--- a/style.css
+++ b/style.css
@@ -101,6 +101,8 @@ a {
 }
 #icon {
 	margin-right: 20px;
+	border-radius: 25px;
+	box-shadow: 0 0 50px gray;
 }
 /* media queries */
 @media only screen and (max-width: 688px) {
@@ -121,7 +123,7 @@ a {
 	.end-container {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
-		/* align-items: center; */
+		align-items: center;
 		justify-content: center;
 	}
 }
